fix dark mode button size and alignment

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -38,8 +38,23 @@
   }
 
   .btn {
+    display: flex;
+    align-items: center;
+    border: none;
+    padding: 0.3rem;
+    border-radius: 50%;
+    font-size: 1rem;
+    background-color: #fbd38d;
     position: absolute;
     right: -2rem;
     top: 0.5rem;
+  }
+}
+
+.mail {
+  a > * {
+    vertical-align: middle;
+    font-size: 20px;
+    color: papayawhip;
   }
 }
